--- a/dbms/nbproject/project.properties
+++ b/dbms/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/dbms.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-3.1.14-bin.jar=/Users/siddharth/Downloads/mysql-connector-java-3.1.14/mysql-connector-java-3.1.14-bin.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-3.1.14-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
